[Bug #19875] Utilize SSE4 instructions to count bytes

Copied from https://github.com/Freaky/fast-bytecount, for some
compilers.